--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -59,6 +59,10 @@
                                 margin: 10px;
                                 display: flex;
                             }
+                            .preview2 {
+                                margin: 10px;
+                                display: flex;
+                            }
                             .image_box {
                                 width: 620px;
                                 height: 150px;
