--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -47,7 +47,9 @@
                     border-top: 1px solid #eee;
                     .image_upload {
                         padding: 40px;
+                        
                         .image_upload_box {
+                            
                             display: flex;
                         }
                         .text {
@@ -55,9 +57,12 @@
                         }
                         .image_box_main {
                             display: flex;
+                            width: 695px;
+                            // flex-wrap: wrap;
                             .preview {
                                 margin: 10px;
                                 display: flex;
+                                // display: inline-block;
                             }
                             .preview2 {
                                 margin: 10px;
@@ -69,6 +74,7 @@
                                 text-align: center;
                                 padding: 10px 10px 10px 10px;
                                 border: 1px solid #ccc;
+                                
                                 .image_boxs {
                                     display: none;
                                     display: block;
