--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,7 +6,7 @@
       .camera__box-name
         出品
       .camera__box-font
-        %i.fas.fa-camera
+        %i.fas.fa-camera.faa-pulse.animated-hover
   .slick
     .image
       .box
