--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,12 +1,141 @@
-.form
-  = form_for @post do |form|
-    = form.text_field :name, placeholder:"name"
-    = form.text_field :description, placeholder:"description"
-    = form.text_field :cotegory, placeholder:"cotegory"
-    = form.text_field :brand, placeholder:"brand"
-    = form.text_field :status, placeholder:"status"
-    = form.text_field :postage, placeholder:"postage"
-    = form.text_field :ship_from, placeholder:"ship_from"
-    = form.text_field :shipping_date, placeholder:"shipping_date"
-    = form.text_field :price, placeholder:"price"
-    = form.submit
+.container
+  .content_buy_header
+    = link_to image_tag('/img/fmarket_logo_red.svg', width: '150', height: '75'), root_path
+  .newmain
+    .main_container
+      .container-into
+        .container-into_header 商品の情報を入力
+        .form
+          = form_for @post do |form|
+            .text
+              .image_upload
+                .image_upload_box
+                  .image_upload_title 出品画像
+                  .must 必須
+                .text 最大１０枚までアップロードできます。
+                .image_box_main
+                  .preview
+                  %label{for:"image",class:"image_box"}
+                    %input{name:"item[item_images_attributes][][image]" ,type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple:  true,data: {image: 0}}/
+
+              .good_content
+                .good_content_box
+                  .good_content_title 商品名
+                  .must 必須
+                = form.text_field :name, placeholder:"商品名（必須40文字まで)",class: "good_box"
+                .good_description 
+                  .good_description_title 商品の説明
+                  .must 必須
+                = form.text_field :description, placeholder:"商品説明(必須1000文字まで)",class:"good_description_box"
+              .good_content_detail
+                .good_content_detail_title 商品の詳細
+
+
+                .good_content_form  
+
+                  .content_form.sell__about__right__wrap
+                    = form.label :category, "カテゴリー"
+                    %span.required.must 必須
+                    .content_form.sell__about__right__wrap-box.parent
+                      %select#parent
+                        %option{value: 0} ---
+                        - Category.where('ancestry IS NULL').each do |category|
+                          %option{value: "#{category.id}"} #{category.name}
+                    .content_form.sell__about__right__wrap-box.child
+                      %select#child
+                    .content_form.sell__about__right__wrap-box.grand_child
+                      = form.collection_select(:category, [], :id, :name, {prompt: "---"}, {id: "grand_child"})
+
+                  .content_form.good_form_2
+                    .content_form.good_form_2_box
+                      .good_form_2_title サイズ
+                      .must 必須
+                    = form.select :size,[["S","S"],["M","M"],["L","L"]],  :prompt => "---",class:"good_form_box"
+
+                  .content_form.form-group.brand--container
+                    = form.fields_for :brand do |brand|
+                      .form_label
+                        = brand.label "ブランド"
+                        %span.form-require-gray 任意
+                      %div
+                      = brand.text_field :brand, placeholder: "例）シャネル", value: "", class: "content_form input-default"
+
+
+                  .content_form.good_form_3                  
+                    .content_form.good_form_3_box
+                      .good_form_3_title 商品の状態
+                      .must 必須
+                    = form.select :status, [["新品","新品"],["未使用に近い","未使用に近い"],["目立った傷なし","目立った傷なし"],["やや傷や汚れあり","やや傷や汚れあり"],["汚れ傷あり","汚れ傷あり"],["状態が悪い","状態が悪い"]],  :prompt => "---",class:"good_form_box"
+              .good_send_how
+                .good_send_how_title_box
+                  .good_send_how_title 配送について
+                  .good_send_question ?
+                  -# = link_to "?"
+                .good_send_how_form
+                  .good_send_tasks
+                    = form.fields_for :shipment do |shipment|
+                      .good_send_task
+                        .form_label
+                          = shipment.label "配送料の負担"                      
+                          .must 必須
+                        = shipment.select :delivery_fee, [["送料込み", "送料込み"], ["着払い", "着払い"]],  :prompt => "---" ,class:"good_send_task_box"
+                      .good_send_task
+                        .form_label
+                          = shipment.label "配送料の方法"                      
+                          .must 必須
+                        = shipment.select :shipping_method, [["未定", "未定"], ["らくらくメルカリ便", "らくらくメルカリ便"], ["ゆうメール", "ゆうメール"], ["レターパック", "レターパック"], ["普通郵便(定形、定形外)", "普通郵便(定形、定形外)"], ["クロネコヤマト", "クロネコヤマト"], ["ゆうパック", "ゆうパック"], ["クリックポスト", "クリックポスト"], ["ゆうパケット", "ゆうパケット"]],  :prompt => "---" ,class:"good_send_task_box"
+                      .good_send_task
+                        .form_label
+                          = shipment.label "発送元の地域"                      
+                          .must 必須
+                        = shipment.collection_select(:ship_from, Area.all, :id, :name, prompt: "---")
+                      .good_send_task
+                        .form_label
+                          = shipment.label "発送までの日数"                      
+                          .must 必須
+                        = shipment.select :ship_days, [["1~2日で配送", "1~2日で配送"], ["3~4日で配送", "3~4日で配送"], ["5~6日で配送", "5~6日で配送"]],  :prompt => "---" ,class:"good_send_task_box"
+              .good_cost
+                .good_cost_title_box
+                  .good_cost_title 販売価格(300~9,999,999)
+                  .good_cost_question ?
+                  -# = link_to "?"
+                .good_cost_box    
+                  .cost
+                    .cost_clearfix_box
+                      .title_cost
+                        .cost_clearfix_titie 価格
+                        .must 必須
+                      .cost_clearfix_num
+                        .money_key ¥
+                        = form.text_field :price, placeholder:"例300",class: "input_cost"
+                  .tasx 
+                    .tasx_clreafix
+                      .left_task 販売手数料(10%)
+                      .rigth_task -
+                  .profit
+                    .profit_box
+                      .left_profit 販売利益
+                      .rigth_profit -
+              .sell_btn
+                .sell_btn_text
+                  .h1 禁止されている出品、行為を必ずご確認ください
+                  .h2 またブランド品でシリアルナンバー等がある場合はご記載ください。偽ブランドの販売は犯罪であり処罰される可能性があります。
+                  .h3 また、出品をもちまして加盟店規約に同意したことになります。
+                .sell_btn_confirm 
+                  .sell_btn_confirm_text
+                    =form.submit "変更する",class: "submit"
+                .sell_btn_back
+                  =link_to "もどる", :back,  class: "sell_btn_back_text"
+
+  .footer_wrapper
+    %ul.footer-wrap
+      %li.footer-text プライバシーポリシー
+      %li.footer-text メルカリ利用規約
+      %li.footer-text 特定商取引に関する表記
+    
+    .footer-image
+      = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2177740229", width: '70', height: '70'), root_path
+
+    .footer-copy
+      %p &copy; 2019 Mercari
+
