--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -55,7 +55,7 @@
                         }
                         .image_box_main {
                             display: flex;
-                            // width: 695px;
+                            width: 695px;
                             .preview {
                                 flex-wrap: wrap;
                                 margin: 10px;
