--- a/app/assets/stylesheets/mypage/index.scss
+++ b/app/assets/stylesheets/mypage/index.scss
@@ -74,10 +74,10 @@
 
   .menu1{
     width: 50%;
-    background: #fff;
+    // background: #fff;
     text-align: center;
     font-size: 16px;
-    border-top: 2px solid #ea352d;
+    // border-top: 2px solid #ea352d;
   }
   .menu1name{
     margin-top: 25px;
@@ -158,7 +158,7 @@
 
   &__box3{
     margin: 40px 0 0;
-    background: #fff;
+    // background: #fff;
   }
 
   &__title{
