--- a/app/assets/stylesheets/posts/user.scss
+++ b/app/assets/stylesheets/posts/user.scss
@@ -81,6 +81,7 @@ body {
 .member-wrap {
   width: 700px;
   height: 100%;
+  background: #fff;
   margin: 70px auto 0;
   padding-bottom: 30px;
   & h2 {
@@ -141,8 +142,66 @@ body {
   text-align: left;
   &_border {
     border-bottom: 2px solid #eee;
-    padding-bottom: 32px;
+    // padding-bottom: 32px;
+    margin: 8px auto 0;
+    height: 40px;
+    width: 343px;
+    background: #0099e8;
+    line-height: 40px;
+    text-align: center;
   }
+}
+.field_border-f {
+  border-bottom: 2px solid #eee;
+  // padding-bottom: 32px;
+  margin: 8px auto 0;
+  height: 50px;
+  width: 343px;
+  background: #385185;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  &:hover {
+    opacity: .7;
+  }
+}
+.field_border-g {
+  background: #fff;
+  color: #333;
+  height: 50px;
+  width: 343px;
+  line-height: 50px;
+  text-align: center;
+  margin: 8px auto 0;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  &:hover {
+    opacity: .7;
+  }
+}
+.field-box {
+  margin: 30px 0;
+  width: 456px;
+  border-bottom: 1px solid #eee;
+}
+.field-box p {
+  padding-top: 30px;
+}
+.field_border {
+  border-bottom: 2px solid #eee;
+  margin-bottom: 40px;
+  border-radius: 4px;
+  height: 50px;
+  line-height: 50px;
+  &:hover {
+    opacity: .7;
+  }
+}
+
+.field a.submit-button-facebook {
+  height: 60px;
+  border-style: none;
 }
 .field-input {
   height: 48px;
@@ -201,29 +260,13 @@ body {
     }
   }
   &-blue {
-    background: #0099e8;
     color: #fff;
-    height: 50px;
-    width: 343px;
-    border-style: none;
-    font-size: 14px;
     }
   &-facebook {
-    background: #385185;
     color: #fff;
-    height: 50px;
-    width: 343px;
-    border-style: none;
-    font-size: 14px;
   }
   &-Google {
-    background: #fff;
     color: #333;
-    height: 50px;
-    width: 343px;
-    border-style: none;
-    font-size: 14px;
-    border: 1px solid #ccc;
   }
 }
 .footer {
