--- a/app/views/signups/new.html.haml
+++ b/app/views/signups/new.html.haml
@@ -67,9 +67,12 @@
       = f.label :birthday, "生年月日", class: "member-text"
       %span.required 必須
       %br/
-
-      = f.date_select :birthday, use_month_numbers: true , start_year: 100.years.ago(Date.today).year, default: @the_date,autofocus: true, class: "field-input-time", placeholder: "--",autocomplete: "birthday"
-      
+      = f.select :birthday_year,  [*1919..2019],:prompt => "---", class: "field-input-time"
+      年
+      = f.select :birthday_month,  [*1..12],:prompt => "---", class: "field-input-time"
+      月
+      = f.select :birthday_day, [*1..31],:prompt => "---", class: "field-input-time"
+      日
       .member-person-wrap-suer-text
         %p ※本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
 
