--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -259,21 +259,32 @@ h3 {
     padding-right: 14px;
     display: flex;
     padding-bottom: 10px;
+    :hover{
+            color: #0095ee;
+    }
 }
 
 .middle-content1 {
     padding: 0px 14px;
     padding-bottom: 10px;
+    :hover{
+            color: #0095ee;
+    }
 }
-
 .middle-content2 {
     padding: 0px 14px;
     padding-bottom: 10px;
+    :hover{
+            color: #0095ee;
+    }
 }
 
 .right-content1 {
     padding-left: 14px;
     padding-bottom: 10px;
+    :hover{
+            color: #0095ee;
+    }
 }
 
 .header-menu {
