--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -15,6 +15,7 @@
                 .text 最大１０枚までアップロードできます。
                 .image_box_main
                   .preview
+                    .preview_remove
                   %label{for:"image",class:"image_box"}
                     %input{name:"product_images[image][]",type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple: true,image:"0",style:"display:none"}/
               .good_content
