--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,7 +6,14 @@
         = @post.name
       .item-main-content.flex-box
         .owl-item-inner
-          = link_to image_tag('/img/logo_red.svg', width: '300', height: '300'), root_path
+          = link_to image_tag('/img/ps5.jpg', width: '300', height: '300'), root_path
+          .owl-item-inner-box
+            = image_tag('/img/ps5.jpg', width: '60', height: '60')
+            = image_tag('/img/ps5.jpg', width: '60', height: '60')
+            = image_tag('/img/ps5.jpg', width: '60', height: '60')
+            = image_tag('/img/ps5.jpg', width: '60', height: '60')
+            = image_tag('/img/ps5.jpg', width: '60', height: '60')
+            = image_tag('/img/ps5.jpg', width: '60', height: '60')
         %table.item-detail-table
           %tbody
             %tr
@@ -67,103 +74,124 @@
 
     .item-social-media-box
       %ul.social-media-box
-        %li
-          .share-btn
-            = link_to "F"
-            %i.icon-facebook
-        %li
-          .share-btn
-            = link_to "T"
-            %i.icon-twitter
-        %li
-          .share-btn
-            = link_to "L"
-            %i.icon-line
-        %li
-          .share-btn
-            = link_to "P"
-            %i.icon-pinterest
+        %li.share-btn
+          = link_to user_facebook_omniauth_authorize_path do
+            %i.fab.fa-facebook-square
+        %li.share-btn
+          = link_to do
+            %i.fab.fa-twitter-square
+        %li.share-btn 
+          = link_to do
+            %i.fab.fa-line
+
+        %li.share-btn
+          = link_to do
+            %i.fab.fa-pinterest
     %h2.items-box-head
-      = link_to "森下さんのその他の出品"
+      = link_to "#{@post.seller.nickname}さんの出品"
     .items-box-content
       .items-box
         = link_to ""
         .items-box-photo
           .lazyloaded
-            = link_to image_tag("", width: '220', height: '220')#, topics_path
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
           .items-box-body
             %h3.items-box-name オリエンタルトラフィック ブラック パンプス
             .items-box-num
               .items-box-price 2400円
               .font-2 4
+
       .items-box
-        .items-box-photo
-          %img.lazyloaded
-          .items-box-body
-            %h3.items-box-name オリエンタルトラフィック ブラック パンプス
-            .items-box-num
-              .items-box-price 2400円
-              .font-2 4
-      .items-box
-        .items-box-photo
-          %img.lazyloaded
-          .items-box-body
-            %h3.items-box-name オリエンタルトラフィック ブラック パンプス
-            .items-box-num
-              .items-box-price 2400円
-              .font-2 4
-      .items-box
-        .items-box-photo
-          %img.lazyloaded
-          .items-box-body
-            %h3.items-box-name オリエンタルトラフィック ブラック パンプス
-            .items-box-num
-              .items-box-price 2400円
-              .font-2 4
-    %h2.items-box-head
-      = link_to "ディーホリックのローファー/革靴 その他の商品"
-    .items-box-content
-      .items-box
+        = link_to ""
         .items-box-photo
           .lazyloaded
-            = link_to image_tag("", width: '220', height: '220')#, topics_path
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
           .items-box-body
             %h3.items-box-name オリエンタルトラフィック ブラック パンプス
             .items-box-num
               .items-box-price 2400円
               .font-2 4
+
       .items-box
+        = link_to ""
         .items-box-photo
-          %img.lazyloaded
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
           .items-box-body
             %h3.items-box-name オリエンタルトラフィック ブラック パンプス
             .items-box-num
               .items-box-price 2400円
               .font-2 4
+
       .items-box
+        = link_to ""
         .items-box-photo
-          %img.lazyloaded
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
           .items-box-body
             %h3.items-box-name オリエンタルトラフィック ブラック パンプス
             .items-box-num
               .items-box-price 2400円
               .font-2 4
+
       .items-box
+        = link_to ""
         .items-box-photo
-          %img.lazyloaded
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
           .items-box-body
             %h3.items-box-name オリエンタルトラフィック ブラック パンプス
             .items-box-num
               .items-box-price 2400円
               .font-2 4
+
+    %h2.items-box-head
+      = link_to "#{@category.name}その他の商品"
+    .items-box-content
       .items-box
+        = link_to ""
         .items-box-photo
-          %img.lazyloaded
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
           .items-box-body
             %h3.items-box-name オリエンタルトラフィック ブラック パンプス
             .items-box-num
               .items-box-price 2400円
               .font-2 4
+
+      .items-box
+        = link_to ""
+        .items-box-photo
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
+          .items-box-body
+            %h3.items-box-name オリエンタルトラフィック ブラック パンプス
+            .items-box-num
+              .items-box-price 2400円
+              .font-2 4
+
+      .items-box
+        = link_to ""
+        .items-box-photo
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
+          .items-box-body
+            %h3.items-box-name オリエンタルトラフィック ブラック パンプス
+            .items-box-num
+              .items-box-price 2400円
+              .font-2 4
+
+      .items-box
+        = link_to ""
+        .items-box-photo
+          .lazyloaded
+            = link_to image_tag("/img/ps5.jpg", width: '220', height: '220')#, topics_path
+          .items-box-body
+            %h3.items-box-name オリエンタルトラフィック ブラック パンプス
+            .items-box-num
+              .items-box-price 2400円
+              .font-2 4
+
     %nav.bread-crumbs
       %ul.bread-crumbs-box
         %li.bread-crumbs-box-left
