--- a/app/views/signups/phone.html.haml
+++ b/app/views/signups/phone.html.haml
@@ -36,13 +36,5 @@
 
     .submit-button-text
       = link_to "電話番号の確認が必要な理由＞"
-
-  %ul.footer-wrap
-    %li.footer-text プライバシーポリシー
-    %li.footer-text メルカリ利用規約
-    %li.footer-text 特定商取引に関する表記
   
-  .footer-image
-    = link_to image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2177740229", width: '70', height: '70'), root_path
-  .footer-copy
-    %p &copy; 2019 Mercari
+= render 'signups/footer'
