クレジットカード登録機能

--- a/app/views/signups/complete.html.haml
+++ b/app/views/signups/complete.html.haml
@@ -19,17 +19,13 @@
 
 .member-wrap
   %h2 会員登録完了
+  .field
+    .member-person-wrap-suer-text-center
+      %p ありがとうございます
+      %p 会員登録が完了しました。
   
+  = link_to 'メルカリをはじめる',root_path , class: "submit-button" 
 
-  = form_for @user, url: done_signups_path, method: :get do |f|
-
-    .field    
-      .member-person-wrap-suer-text-center
-        %p ありがとうございます
-        %p 会員登録が完了しました。
-
-    .field
-    = f.submit "メルカリをはじめる", class: "submit-button"
 
   %ul.footer-wrap
     %li.footer-text プライバシーポリシー
