--- a/app/views/signups/address.html.haml
+++ b/app/views/signups/address.html.haml
@@ -19,7 +19,7 @@
 
 .member-wrap
   %h2 お届け先住所入力
-  = form_for @user, url: check_signups_path, method: :get do |f|
+  = form_for @user, url: done_signups_path, method: :get do |f|
 
     -# .field
     -#   = f.label :address_last_name, "お名前(全角)", class: "member-text"
