--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -116,11 +116,11 @@
                   .tasx 
                     .tasx_clreafix
                       .left_task 販売手数料(10%)
-                      .rigth_task -
+                      .right_task
                   .profit
                     .profit_box
                       .left_profit 販売利益
-                      .rigth_profit -
+                      .right_profit
               .sell_btn
                 .sell_btn_text
                   .h1 禁止されている出品、行為を必ずご確認ください
