--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -281,7 +281,7 @@
                                         float: left;
                                         padding-top: 20px;
                                     }
-                                    .rigth_task {
+                                    .right_task {
                                         float: right;
                                         padding-top: 20px;
                                     }
@@ -295,7 +295,7 @@
                                         float: left;
                                         padding-top: 20px;
                                     }
-                                    .rigth_profit {
+                                    .right_profit {
                                         float: right;
                                         padding-top: 20px;
                                     }
@@ -383,3 +383,5 @@
     height: 15px;
     width: 25px;
 }
+
+
