--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -16,7 +16,6 @@
         border-color: rgb(214, 212, 212);
         cursor: pointer;
     }
-    
     input {
         border-radius: 5px;
         font-weight: normal;
@@ -54,7 +53,7 @@
                             font-size: 13px;
                         }
                         .image_box_main {
-                            display: flex;
+                            display: grid;
                             width: 695px;
                             .preview {
                                 flex-wrap: wrap;
@@ -68,7 +67,6 @@
                                 text-align: center;
                                 padding: 10px 10px 10px 10px;
                                 border: 1px solid #ccc;
-                                
                                 .image_boxs {
                                     display: none;
                                     display: block;
@@ -348,7 +346,6 @@
     }
 }
 
-
 .content_form {
     padding: 10px 0;
     width: 100%;
@@ -383,5 +380,3 @@
     height: 15px;
     width: 25px;
 }
-
-
