--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -15,8 +15,11 @@
                 .text 最大１０枚までアップロードできます。
                 .image_box_main
                   .preview
-                  %label{for:"image",class:"image_box"}
-                    %input{name:"product_images[image][]",type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple: true,image:"0",style:"display:none"}/
+                  = form.fields_for :images do |img|
+                    = img.file_field :image_url 
+                    -# , name: "images[:image_url][]"
+                  -# %label{for:"image",class:"image_box"}
+                  -#   %input{name:"product_images[image][]",type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple: true,image:"0",style:"display:none"}/
               .good_content
                 .good_content_box
                   .good_content_title 商品名
