カテゴリー

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "posts/user";
 @import "posts/new";
 @import "posts/search";
+@import "posts/category";
 
 @import "mypage/index";
 @import "mypage/show";
