--- a/app/assets/stylesheets/mypage/index.scss
+++ b/app/assets/stylesheets/mypage/index.scss
@@ -2,6 +2,7 @@
   height: 48px;
   background: #fff;
   border-top: 1px solid #eee;
+  box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
 
   .breadcrumbs{
     font-size: 15px;
